tooltip alignment fix

--- a/src/app/group/components/group-add-topics/group-add-topics.component.scss
+++ b/src/app/group/components/group-add-topics/group-add-topics.component.scss
@@ -146,3 +146,8 @@
     }
   }
 }
+
+.tooltip {
+  position: relative;
+  height: 20px;
+}
